..F....... [ZBX-7097] changed dashboard drag'n'drop widget placeholder color in the dark orange and dark blue themes (Pavels)
A.F....... [ZBX-1357] updated Dutch, Finnish, Indonesian, Italian, Lithuanian, Persian, Portuguese (Portugal), Russian and Slovak translations; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...PS. [ZBXNEXT-1179] fixed inconsistency in process activity time logging (Andris)
A......... [ZBX-6362] fixed proxy select interfaces (Eduard)
..F....... [ZBX-7115] improved data filtering in latest data page (Eduard)
.......PS. [ZBX-6835] fixed bug when agent/proxy connection error could have resulted in a wrong warning about message size (wiper)
A......... [ZBX-7164] fixed trigger and trigger prototype read only fields to no longer change when linking template to host (Ivo)
A.F....... [ZBX-6760] improved performance of getting global scripts (Sasha)
A.F....... [ZBX-6995] improved the performance of graph and graph prototype permission checks (Pavels)
...G...... [ZBX-6591] fixed resolution of IPv4 and IPv6 addresses if DNS hostname is specified as server parameter in configuration file; thanks to Trever L. Adams for patch (igors)
....I..... [ZBX-5374] removed ONLY directive from PostgreSQL upgrade statements (Sasha)
..F....... [ZBX-7097] fixed dashboard drag'n'drop widget placeholder not being displayed in the classic theme (Pavels)
....I..... [ZBX-7130] fixed makefiles to build zabbix_proxy only (Sasha)
..F....... [ZBX-7055] fixed displaying OK trigger status in maps (Eduard)
..F....... [ZBX-7081] fixed node drop down being displayed incorrectly in several pop ups (Pavels)
A......... [ZBX-7086] fixed application mass add from different hosts or templates validation (Eduard)
........S. [ZBX-7133] fixed processing of zabbix[host,*,available] item; fixed proxy's hosts availability data on server (Sasha)
..F....... [ZBX-7099] fixed IT services tree icons alignment (Eduard)
A.F.I..... [ZBX-7121] increased size of interface.ip field (Sasha)