@@ -20,7 +20,7 @@
 
 define('ZABBIX_VERSION',     '2.1.9');
 define('ZABBIX_API_VERSION', '2.1.9');
-define('ZABBIX_DB_VERSION',	 2010183);
+define('ZABBIX_DB_VERSION',	 2010187);
 
 define('ZABBIX_COPYRIGHT_FROM', '2001');
 define('ZABBIX_COPYRIGHT_TO',   '2013');
