@@ -3352,7 +3352,7 @@ return array(
 				'null' => false,
 				'type' => DB::FIELD_TYPE_INT,
 				'length' => 10,
-				'default' => '3',
+				'default' => '0',
 			),
 			'highlight' => array(
 				'null' => false,
@@ -3532,9 +3532,10 @@ return array(
 				'default' => '',
 			),
 			'label_location' => array(
-				'null' => true,
+				'null' => false,
 				'type' => DB::FIELD_TYPE_INT,
 				'length' => 10,
+				'default' => '-1',
 			),
 			'x' => array(
 				'null' => false,
