@@ -2159,6 +2159,35 @@ static int	DBpatch_2010183(void)
 	return DBmodify_field_type("sysmaps_links", &field);
 }
 
+static int	DBpatch_2010184(void)
+{
+	const ZBX_FIELD	field = {"label_location", "0", NULL, NULL, 0, ZBX_TYPE_INT, ZBX_NOTNULL, 0};
+
+	return DBset_default("sysmaps", &field);
+}
+
+static int	DBpatch_2010185(void)
+{
+	if (ZBX_DB_OK > DBexecute("update sysmaps_elements set label_location=-1 where label_location is null"))
+		return FAIL;
+
+	return SUCCEED;
+}
+
+static int	DBpatch_2010186(void)
+{
+	const ZBX_FIELD	field = {"label_location", "-1", NULL, NULL, 0, ZBX_TYPE_INT, ZBX_NOTNULL, 0};
+
+	return DBset_default("sysmaps_elements", &field);
+}
+
+static int	DBpatch_2010187(void)
+{
+	const ZBX_FIELD	field = {"label_location", "-1", NULL, NULL, 0, ZBX_TYPE_INT, ZBX_NOTNULL, 0};
+
+	return DBset_not_null("sysmaps_elements", &field);
+}
+
 #define DBPATCH_START()					zbx_dbpatch_t	patches[] = {
 #define DBPATCH_ADD(version, duplicates, mandatory)	{DBpatch_##version, version, duplicates, mandatory},
 #define DBPATCH_END()					{NULL}};
@@ -2391,6 +2420,10 @@ int	DBcheck_version(void)
 	DBPATCH_ADD(2010181, 0, 1)
 	DBPATCH_ADD(2010182, 0, 1)
 	DBPATCH_ADD(2010183, 0, 1)
+	DBPATCH_ADD(2010184, 0, 1)
+	DBPATCH_ADD(2010185, 0, 1)
+	DBPATCH_ADD(2010186, 0, 1)
+	DBPATCH_ADD(2010187, 0, 1)
 
 	DBPATCH_END()
 
